--- a/soundcloud.html
+++ b/soundcloud.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Mar 29 2019 05:18:55 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Mar 29 2019 19:17:15 GMT+0000 (UTC)  -->
 <html data-wf-page="5c9d5e84f771ac7b0f4ba0af" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -33,8 +33,6 @@
   <div class="casestudypix"><img src="images/pic2.png" srcset="images/pic2-p-500.png 500w, images/pic2-p-800.png 800w, images/pic2.png 922w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 84vw, (max-width: 991px) 60vw, 42vw" alt=""></div>
   <p class="paragraph-3">There are couple small differences between both UI’s, and the first is the 4th icon. On the Apple app, SoundCloud chose to use the loop button whereas on Android it’s the icon for viewing the music queue.</p>
   <div class="casestudypix small"><img src="images/pic3.png" srcset="images/pic3-p-500.png 500w, images/pic3-p-800.png 800w, images/pic3.png 922w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 56vw, (max-width: 991px) 60vw, 57vw" alt="" class="image-13"></div><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
-  <h1 class="writeuphead">Car Mode</h1>
-  <p class="paragraph-3">I also kept the progress bar because after asking around my friend circle, they all agreed that it was SoundCloud’s little “signature” progress bar that they had never seen in other music or audio playing apps.<br></p>
   <p class="paragraph-3">The second small detail is that on the Apple UI, the comment icon displays the amount of comments while the Android UI does not. Both have the number of likes the song has recieved but not comments. <br><br>This brought forth the questions:<br> – Why only the slight difference between both UI’s?<br> – Is the music queue or looping a song more important to a SoundCloud user? <br>– Why was the amount of likes more important that the amount of comments on the Android app? <br><br>Other iconographic differences I chalked up to different Android/Apple standards (i.e. the share icon). What is similar about both UI’s is that the focal point of the UI seems to be the album art. It takes the entire screen and everything is overlayed or placed on top of it.</p>
   <div class="casestudypix medium"><img src="images/51060121_2105695092857575_8049758930298994688_n-1.jpg" srcset="images/51060121_2105695092857575_8049758930298994688_n-1-p-500.jpeg 500w, images/51060121_2105695092857575_8049758930298994688_n-1-p-800.jpeg 800w, images/51060121_2105695092857575_8049758930298994688_n-1.jpg 1024w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 53vw, (max-width: 991px) 50vw, (max-width: 4654px) 22vw, 1024px" alt="" class="image-12"></div>
   <p class="paragraph-3">This results in the iconography at the bottom is hard to discern, especially with such busy album art.</p>
@@ -61,11 +59,11 @@
   <h1 class="writeuphead">Car Mode</h1>
   <p class="paragraph-3">During the course of this project, while I was driving around with my friend, I noticed that her Audible app had giant icons while her podcast was playing through the car speaker. I asked her what it was and she explained that “Car Mode” would activate whenever she got into her car. <br></p>
   <div class="casestudypix"><img src="images/pic6.png" srcset="images/pic6-p-500.png 500w, images/pic6-p-800.png 800w, images/pic6.png 973w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 84vw, (max-width: 991px) 60vw, 42vw" alt=""></div>
-  <h1 class="writeuphead">Car Mode</h1>
   <p class="paragraph-3">My SoundCloud is playing in my car all the time while I’m driving and there is no change in UI to accommate drivers that may want to quickly skip or pause a song so I designed a “Car Mode” screen.<br></p>
   <div class="casestudypix"><img src="images/pic7.png" srcset="images/pic7-p-500.png 500w, images/pic7.png 973w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 84vw, (max-width: 991px) 60vw, 42vw" alt=""></div>
   <p class="paragraph-3">I chose to leave the soundwave progress bar out of “Car Mode” because I wanted to create a simple and informational screen for drivers to be able to quickly glance at. The title, play, forward, and rewind buttons take up the most surface area because it’s more accessible for drivers to interact with without being completely distracted by the busier UI.<br></p>
   <h1 class="writeuphead">Final Prototype</h1>
+  <p class="paragraph-3">Linked below shortly!<br></p>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
   <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
