--- a/hidden.html
+++ b/hidden.html
@@ -21,7 +21,7 @@
   <a href="index.html" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a>
-  <p class="hiddentitle">Oh no!</p>
+  <p class="hiddentitle">Project hidden.</p>
   <p class="hidden">Please contact me for more details about this project!<br><br><br>—</p>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
   <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
