--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Mar 29 2019 05:18:55 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
 <html data-wf-page="5c73926ac6a0659e847cc5db" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -17,12 +17,14 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="utility-page-wrap">
-    <div class="utility-page-content"><img src="https://d3e54v103j8qbb.cloudfront.net/static/page-not-found.211a85e40c.svg" alt="">
-      <h2 class="heading-3">Error 404</h2>
-      <div class="text-block-2">Oops! The page you are looking for doesn&#x27;t exist 🙁</div>
-    </div>
-  </div>
+  <div class="div-block-2"></div>
+  <a href="index.html" class="back w-inline-block">
+    <div class="text-block-3">⟵ back</div>
+  </a>
+  <p class="hiddentitle">Error 404</p>
+  <p class="hidden">AHH something went wrong!<br><br><br>—</p>
+  <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
+  <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
