--- a/acai-house.html
+++ b/acai-house.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5ca43e556408d1f6d0422ebd" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <div class="div-block-2"></div>
   <a href="index.html" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
-  </a><img src="images/acaihead.jpg" srcset="images/acaihead.jpg 500w, images/acaihead.jpg 800w, images/acaihead.jpg 1600w, images/acaihead.jpg 2600w, images/acaihead.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
+  </a><img src="images/acaihead.jpg" srcset="images/acaihead-p-500.jpeg 500w, images/acaihead-p-800.jpeg 800w, images/acaihead-p-1600.jpeg 1600w, images/acaihead-p-2600.jpeg 2600w, images/acaihead.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text acaihouse">— visual design</strong></p>
   <p class="writeuptitle">Acai House</p>
   <p class="paragraph-3">Winter 2019<br></p>
