--- a/goog.html
+++ b/goog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5ca43c99232cdd8c87912eb4" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -20,12 +20,12 @@
   <div class="div-block-2"></div>
   <a href="index.html" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
-  </a><img src="images/googleheader.png" srcset="images/googleheader.png 500w, images/googleheader.png 800w, images/googleheader.png 1080w, images/googleheader.png 1600w, images/googleheader.png 2000w, images/googleheader.png 2600w, images/googleheader.png 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
+  </a><img src="images/googleheader.png" srcset="images/googleheader-p-500.png 500w, images/googleheader-p-800.png 800w, images/googleheader-p-1080.png 1080w, images/googleheader-p-1600.png 1600w, images/googleheader-p-2000.png 2000w, images/googleheader-p-2600.png 2600w, images/googleheader.png 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text goog">— product design</strong></p>
   <p class="writeuptitle">Bop</p>
   <p class="paragraph-3">Winter 2019</p>
   <h1 class="writeuphead">Overview</h1>
-  <p class="paragraph-3">Content is coming soon!</p><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  <p class="paragraph-3">Content is coming soon!</p>
   <div class="div-block"></div>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
   <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
