--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5c735f243f8bb27b3b26933f" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -25,7 +25,7 @@
     <h1 id="w-node-9bde8af865d3-3b26933f" class="heading">Lucy</h1>
     <div id="w-node-b0f56acb0dc4-3b26933f" class="subtitle">📍san diego, ca; born and raised in arizona</div>
     <div id="w-node-10d6bd923068-3b26933f" class="desc">currently eating food &amp; listening to music </div>
-  </div><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  </div>
   <div class="columns w-row">
     <div class="column-4 w-col w-col-6"><img src="images/ridiculous.jpg" srcset="images/ridiculous-p-500.jpeg 500w, images/ridiculous-p-800.jpeg 800w, images/ridiculous-p-1080.jpeg 1080w, images/ridiculous-p-1600.jpeg 1600w, images/ridiculous-p-2000.jpeg 2000w, images/ridiculous-p-2600.jpeg 2600w, images/ridiculous.jpg 3092w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7190px) 43vw, 3092px" alt="" class="image-9"></div>
     <div class="column-5 w-col w-col-6">
