--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5ca03647b7e3ed64621e0000" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
   <p class="hiddentitle">Coming Soon!</p>
   <p class="hidden">Check back shortly for updates 😈<br><br>—</p>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
-  <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
