--- a/illustrations.html
+++ b/illustrations.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5ca03712b9de9ccb8db2bede" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -19,15 +19,15 @@
 <body class="body">
   <div class="div-block-2"></div>
   <div class="gallery w-row">
-    <div class="w-col w-col-6"><img src="images/biomes-05.png" srcset="images/biomes-05.png 500w, images/biomes-05.png 800w, images/biomes-05.png 1080w, images/biomes-05.png 1600w, images/biomes-05.png 2000w, images/biomes-05.png 2914w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 38vw, (max-width: 6938px) 42vw, 2914px" alt="">
+    <div class="w-col w-col-6"><img src="images/biomes-05.png" srcset="images/biomes-05-p-500.png 500w, images/biomes-05-p-800.png 800w, images/biomes-05-p-1080.png 1080w, images/biomes-05-p-1600.png 1600w, images/biomes-05-p-2000.png 2000w, images/biomes-05.png 2914w" sizes="100vw" alt="">
       <p class="galcap">Biome_1_Field.jpg</p>
     </div>
-    <div class="w-col w-col-6"><img src="images/biomes-03.png" srcset="images/biomes-03.png 500w, images/biomes-03.png 800w, images/biomes-03.png 1080w, images/biomes-03.png 1600w, images/biomes-03.png 2000w, images/biomes-03.png 2913w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 38vw, (max-width: 6935px) 42vw, 2913px" alt="">
+    <div class="w-col w-col-6"><img src="images/biomes-03.png" srcset="images/biomes-03-p-500.png 500w, images/biomes-03-p-800.png 800w, images/biomes-03-p-1080.png 1080w, images/biomes-03-p-1600.png 1600w, images/biomes-03-p-2000.png 2000w, images/biomes-03.png 2913w" sizes="100vw" alt="">
       <p class="galcap">Biome_2_Desert.jpg</p>
     </div>
   </div>
   <div class="galleryafter w-row">
-    <div class="w-col w-col-6"><img src="images/biomes-04.png" srcset="images/biomes-04.png 500w, images/biomes-04.png 800w, images/biomes-04.png 1080w, images/biomes-04.png 1600w, images/biomes-04.png 2000w, images/biomes-04.png 2914w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 38vw, (max-width: 6938px) 42vw, 2914px" alt="">
+    <div class="w-col w-col-6"><img src="images/biomes-04.png" srcset="images/biomes-04-p-500.png 500w, images/biomes-04-p-800.png 800w, images/biomes-04-p-1080.png 1080w, images/biomes-04-p-1600.png 1600w, images/biomes-04-p-2000.png 2000w, images/biomes-04.png 2914w" sizes="100vw" alt="">
       <p class="galcap">Biome_3_Forest.jpg</p>
     </div>
     <div class="w-col w-col-6"><img src="images/bird.gif" alt="">
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="gallerylast w-row">
-    <div class="w-col w-col-6"><img src="images/stupid-06.png" srcset="images/stupid-06.png 500w, images/stupid-06.png 800w, images/stupid-06.png 1080w, images/stupid-06.png 1600w, images/stupid-06.png 2000w, images/stupid-06.png 2914w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 38vw, (max-width: 6938px) 42vw, 2914px" alt="">
+    <div class="w-col w-col-6"><img src="images/stupid-06.png" srcset="images/stupid-06-p-500.png 500w, images/stupid-06-p-800.png 800w, images/stupid-06-p-1080.png 1080w, images/stupid-06-p-1600.png 1600w, images/stupid-06-p-2000.png 2000w, images/stupid-06.png 2914w" sizes="100vw" alt="">
       <p class="galcap">Space_1.jpg — &quot;look how they shine for you&quot;</p>
     </div>
     <div class="w-col w-col-6"></div>
@@ -43,12 +43,12 @@
   <a href="index.html" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a>
-  <div class="galcon"><img src="images/SYNC-01.jpg" srcset="images/SYNC-01.jpg 500w, images/SYNC-01.jpg 800w, images/SYNC-01.jpg 1080w, images/SYNC-01.jpg 3200w, images/SYNC-01.jpg 6825w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 80vw, (max-width: 7260px) 94vw, 6825px" alt=""><img src="images/DSC_0617web.jpg" srcset="images/DSC_0617web.jpg 500w, images/DSC_0617web.jpg 1080w, images/DSC_0617web.jpg 1600w, images/DSC_0617web.jpg 2000w, images/DSC_0617web.jpg 2600w, images/DSC_0617web.jpg 3200w, images/DSC_0617web.jpg 6000w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 80vw, (max-width: 6451px) 93vw, 6000px" alt="" class="image-15">
-    <p class="galcap">CouponBook_Winter18.jpg — printed &amp; distributed around campus</p><img src="images/syn2web.jpg" srcset="images/syn2web.jpg 500w, images/syn2web.jpg 800w, images/syn2web.jpg 1080w, images/syn2web.jpg 2000w, images/syn2web.jpg 3200w, images/syn2web.jpg 6750w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 80vw, (max-width: 7180px) 94vw, 6750px" alt=""><img src="images/DSC_0617editweb.jpg" srcset="images/DSC_0617editweb.jpg 1080w, images/DSC_0617editweb.jpg 1600w, images/DSC_0617editweb.jpg 2000w, images/DSC_0617editweb.jpg 2600w, images/DSC_0617editweb.jpg 3200w, images/DSC_0617editweb.jpg 6000w" sizes="(max-width: 479px) 79vw, (max-width: 767px) 87vw, (max-width: 991px) 80vw, (max-width: 6451px) 93vw, 6000px" alt="" class="image-16">
+  <div class="galcon"><img src="images/SYNC-01.jpg" srcset="images/SYNC-01-p-500.jpeg 500w, images/SYNC-01-p-800.jpeg 800w, images/SYNC-01-p-1080.jpeg 1080w, images/SYNC-01-p-3200.jpeg 3200w, images/SYNC-01.jpg 6825w" sizes="100vw" alt=""><img src="images/DSC_0617web.jpg" srcset="images/DSC_0617web-p-500.jpeg 500w, images/DSC_0617web-p-1080.jpeg 1080w, images/DSC_0617web-p-1600.jpeg 1600w, images/DSC_0617web-p-2000.jpeg 2000w, images/DSC_0617web-p-2600.jpeg 2600w, images/DSC_0617web-p-3200.jpeg 3200w, images/DSC_0617web.jpg 6000w" sizes="100vw" alt="" class="image-15">
+    <p class="galcap">CouponBook_Winter18.jpg — printed &amp; distributed around campus</p><img src="images/syn2web.jpg" srcset="images/syn2web-p-500.jpeg 500w, images/syn2web-p-800.jpeg 800w, images/syn2web-p-1080.jpeg 1080w, images/syn2web-p-2000.jpeg 2000w, images/syn2web-p-3200.jpeg 3200w, images/syn2web.jpg 6750w" sizes="100vw" alt=""><img src="images/DSC_0617editweb.jpg" srcset="images/DSC_0617editweb-p-1080.jpeg 1080w, images/DSC_0617editweb-p-1600.jpeg 1600w, images/DSC_0617editweb-p-2000.jpeg 2000w, images/DSC_0617editweb-p-2600.jpeg 2600w, images/DSC_0617editweb-p-3200.jpeg 3200w, images/DSC_0617editweb.jpg 6000w" sizes="100vw" alt="" class="image-16">
     <p class="galcap">CouponBook_Spring18</p>
   </div>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
-  <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
