--- a/soundcloud.html
+++ b/soundcloud.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 05 2019 01:40:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5c9d5e84f771ac7b0f4ba0af" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
   <meta charset="utf-8">
@@ -34,9 +34,9 @@
   <p class="paragraph-3">There are couple small differences between both UI’s, and the first is the 4th icon. On the Apple app, SoundCloud chose to use the loop button whereas on Android it’s the icon for viewing the music queue.</p>
   <div class="casestudypix small"><img src="images/pic3.png" srcset="images/pic3-p-500.png 500w, images/pic3-p-800.png 800w, images/pic3.png 922w" sizes="100vw" alt="" class="image-13"></div><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
   <p class="paragraph-3">The second small detail is that on the Apple UI, the comment icon displays the amount of comments while the Android UI does not. Both have the number of likes the song has recieved but not comments. <br><br>This brought forth the questions:<br> – Why only the slight difference between both UI’s?<br> – Is the music queue or looping a song more important to a SoundCloud user? <br>– Why was the amount of likes more important that the amount of comments on the Android app? <br><br>Other iconographic differences I chalked up to different Android/Apple standards (i.e. the share icon). What is similar about both UI’s is that the focal point of the UI seems to be the album art. It takes the entire screen and everything is overlayed or placed on top of it.</p>
-  <div class="casestudypix"><img src="images/orig.png" srcset="images/orig.png 500w, images/orig.png 800w, images/orig.png 973w" sizes="100vw" alt="" class="image-12"></div>
+  <div class="casestudypix"><img src="images/orig.png" srcset="images/orig-p-500.png 500w, images/orig-p-800.png 800w, images/orig.png 973w" sizes="100vw" alt="" class="image-12"></div>
   <p class="paragraph-3">This results in the iconography at the bottom is hard to discern, especially with such busy album art.</p>
-  <div class="casestudypix small"><img src="images/bottom.png" srcset="images/bottom.png 500w, images/bottom.png 800w, images/bottom.png 973w" sizes="100vw" alt=""></div>
+  <div class="casestudypix small"><img src="images/bottom.png" srcset="images/bottom-p-500.png 500w, images/bottom-p-800.png 800w, images/bottom.png 973w" sizes="100vw" alt=""></div>
   <h1 class="writeuphead">(Informal) User Research</h1>
   <p class="paragraph-3">Given my own time restraints, in order to gather some user data, I just asked around my friend circle about their experience with SoundCloud for some informal research to begin my needfinding.<br><br>Out of the 4 friends that I gather my informal research from, 3 of them mentioned the album art taking up an inordinate amount of space. One of my friends mentioned that the UI was very cluttered and eventually offput her so much she stopped using SoundCloud. <br><br>2 of the 4 people mentioned that SoundCloud had an interesting progress bar and that it was unique to the app.</p>
   <h1 class="writeuphead">Comparative Analysis</h1>
@@ -47,9 +47,9 @@
   <p class="paragraph-3">With these things in mind, I started to construct my redesign.<br></p>
   <h1 class="writeuphead">Music Player Redesign</h1>
   <p class="paragraph-3">Given that SoundCloud is a music distribution and music sharing platform, in my UI I decided to follow suit and give less attention to the album art. Because SoundCloud contains more user-generated content and gives anyone the opportunity to upload music, I felt the emphasis should be given to the music and title itself rather than the artwork that accompanies the music.<br></p>
-  <div class="casestudypix medium"><img src="images/origpig.png" srcset="images/origpig.png 500w, images/origpig.png 800w, images/origpig.png 973w" sizes="100vw" alt=""></div>
+  <div class="casestudypix medium"><img src="images/origpig.png" srcset="images/origpig-p-500.png 500w, images/origpig-p-800.png 800w, images/origpig.png 973w" sizes="100vw" alt=""></div>
   <p class="paragraph-3">I decided to be consistent and include the number of comments as well as the number of likes just to give the user more visibility of the system status.<br></p>
-  <div class="casestudypix"><img src="images/bar.png" srcset="images/bar.png 500w, images/bar.png 800w, images/bar.png 973w" sizes="100vw" alt=""></div>
+  <div class="casestudypix"><img src="images/bar.png" srcset="images/bar-p-500.png 500w, images/bar-p-800.png 800w, images/bar.png 973w" sizes="100vw" alt=""></div>
   <p class="paragraph-3">I also kept the progress bar because after asking around my friend circle, they all agreed that it was SoundCloud’s little “signature” progress bar that they had never seen in other music or audio playing apps.<br></p>
   <div class="div-block"></div>
   <div class="casestudypix small"><img src="images/Screen-Shot-2019-02-01-at-12.26.41-AM.png" srcset="images/Screen-Shot-2019-02-01-at-12.26.41-AM-p-500.png 500w, images/Screen-Shot-2019-02-01-at-12.26.41-AM.png 758w" sizes="100vw" alt=""></div>
