--- a/index.html
+++ b/index.html
@@ -16,67 +16,71 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="div-block-3">
-    <div class="w-layout-grid grid-3a">
-      <div id="w-node-4dd13f02c592-456c837f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
-      <div id="w-node-84a2d29e0e9f-456c837f" class="linskksksk activee"><a href="/" class="holds-links active w--current">home</a></div>
-      <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="about.html" class="holds-links">about</a></div>
-      <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
-      <h1 id="w-node-9bde8af865d3-456c837f" class="heading">Lucy is a designer of things...</h1>
-      <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s student union. Design co-chair for UC San Diego’s biggest design community. <br></div>
+  <div class="parallax">
+
+    <div class="div-block-3">
+      <div class="w-layout-grid grid-3a">
+        <div id="w-node-4dd13f02c592-456c837f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
+        <div id="w-node-84a2d29e0e9f-456c837f" class="linskksksk activee"><a href="/" class="holds-links active w--current">home</a></div>
+        <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="about.html" class="holds-links">about</a></div>
+        <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
+        <h1 id="w-node-9bde8af865d3-456c837f" class="heading">Lucy is a designer of things...</h1>
+        <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s student union. Design co-chair for UC San Diego’s biggest design community. <br></div>
+      </div>
     </div>
   </div>
-  <div class="bottompiece">
-    <p class="paragraph-7">😇<em> please bear with me while my site is under construction</em></p>
-    <div class="columns-3 w-row">
-      <div class="column-6 w-col w-col-6"><a href="acai-house.html" class="link-block-4 w-inline-block"><img src="images/acai.jpg" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="acai-house.html" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">visual design</strong> <br><strong class="homegridtitle acai">Acai House<br></strong>website design for a local acai shop</p>
-        </a>
+
+    <div class="bottompiece">
+      <p class="paragraph-7">😇<em> please bear with me while my site is under construction</em></p>
+      <div class="columns-3 w-row">
+        <div class="column-6 w-col w-col-6"><a href="acai-house.html" class="link-block-4 w-inline-block"><img src="images/acai.jpg" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="acai-house.html" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">visual design</strong> <br><strong class="homegridtitle acai">Acai House<br></strong>website design for a local acai shop</p>
+          </a>
+        </div>
+        <div class="column-3 w-col w-col-6"><a href="soundcloud.html" class="link-block-4 w-inline-block"><img src="images/cloud.jpg" srcset="images/cloud-p-800.jpeg 800w, images/cloud-p-1080.jpeg 1080w, images/cloud-p-1600.jpeg 1600w, images/cloud-p-2000.jpeg 2000w, images/cloud-p-2600.jpeg 2600w, images/cloud-p-3200.jpeg 3200w, images/cloud.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="soundcloud.html" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle">Soundcloud<br></strong>a redesign of soundcloud&#x27;s music player</p>
+          </a>
+        </div>
       </div>
-      <div class="column-3 w-col w-col-6"><a href="soundcloud.html" class="link-block-4 w-inline-block"><img src="images/cloud.jpg" srcset="images/cloud-p-800.jpeg 800w, images/cloud-p-1080.jpeg 1080w, images/cloud-p-1600.jpeg 1600w, images/cloud-p-2000.jpeg 2000w, images/cloud-p-2600.jpeg 2600w, images/cloud-p-3200.jpeg 3200w, images/cloud.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="soundcloud.html" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle">Soundcloud<br></strong>a redesign of soundcloud&#x27;s music player</p>
-        </a>
+      <div class="columns-4 w-row">
+        <div class="column-7 w-col w-col-6"><a href="hidden.html" class="link-block-4 w-inline-block"><img src="images/google.jpg" srcset="images/google-p-800.jpeg 800w, images/google-p-1080.jpeg 1080w, images/google-p-1600.jpeg 1600w, images/google-p-2000.jpeg 2000w, images/google-p-2600.jpeg 2600w, images/google-p-3200.jpeg 3200w, images/google.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="hidden.html" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle goog">Bop<br></strong>designed an experience for new students to browse, search, and propose new student organizations</p>
+          </a>
+        </div>
+        <div class="column-8 w-col w-col-6"><a href="snapchat.html" class="link-block-4 w-inline-block"><img src="images/sc.jpg" srcset="images/sc-p-800.jpeg 800w, images/sc-p-1080.jpeg 1080w, images/sc-p-1600.jpeg 1600w, images/sc-p-2000.jpeg 2000w, images/sc-p-2600.jpeg 2600w, images/sc-p-3200.jpeg 3200w, images/sc.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="snapchat.html" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle snap">Snapchat<br></strong>a redesign of snapchat&#x27;s display of &quot;stories&quot; on the current discover page</p>
+          </a>
+        </div>
       </div>
+      <div class="columns-6 w-row">
+        <div class="column-9 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="#" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">visual + brand design</strong> <br><strong class="homegridtitle datu">Design at UCSD<br></strong>design co-chair of UC San Diego&#x27;s largest design community</p>
+          </a>
+        </div>
+        <div class="column-10 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="#" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">brand design</strong> <br><strong class="homegridtitle df">Design Frontiers<br></strong>a day long sprint hosted at uc san diego by design at ucsd</p>
+          </a>
+        </div>
+      </div>
+      <div class="columns-6 w-row">
+        <div class="column-9 w-col w-col-6"><a href="illustrations.html" class="link-block-4 w-inline-block"><img src="images/header.jpg" srcset="images/header-p-800.jpeg 800w, images/header-p-1080.jpeg 1080w, images/header-p-1600.jpeg 1600w, images/header-p-2000.jpeg 2000w, images/header-p-2600.jpeg 2600w, images/header-p-3200.jpeg 3200w, images/header.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+          <a href="#" class="homegridtext w-inline-block">
+            <p class="paragraph"><strong class="subtitle">personal</strong> <br><strong class="homegridtitle illustration">Illustration<br></strong>compilation of illustrations</p>
+          </a>
+        </div>
+        <div class="column-10 w-col w-col-6"></div>
+      </div>
+      <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
+      <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
     </div>
-    <div class="columns-4 w-row">
-      <div class="column-7 w-col w-col-6"><a href="hidden.html" class="link-block-4 w-inline-block"><img src="images/google.jpg" srcset="images/google-p-800.jpeg 800w, images/google-p-1080.jpeg 1080w, images/google-p-1600.jpeg 1600w, images/google-p-2000.jpeg 2000w, images/google-p-2600.jpeg 2600w, images/google-p-3200.jpeg 3200w, images/google.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="hidden.html" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle goog">Bop<br></strong>designed an experience for new students to browse, search, and propose new student organizations</p>
-        </a>
-      </div>
-      <div class="column-8 w-col w-col-6"><a href="snapchat.html" class="link-block-4 w-inline-block"><img src="images/sc.jpg" srcset="images/sc-p-800.jpeg 800w, images/sc-p-1080.jpeg 1080w, images/sc-p-1600.jpeg 1600w, images/sc-p-2000.jpeg 2000w, images/sc-p-2600.jpeg 2600w, images/sc-p-3200.jpeg 3200w, images/sc.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="snapchat.html" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle snap">Snapchat<br></strong>a redesign of snapchat&#x27;s display of &quot;stories&quot; on the current discover page</p>
-        </a>
-      </div>
-    </div>
-    <div class="columns-6 w-row">
-      <div class="column-9 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="#" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">visual + brand design</strong> <br><strong class="homegridtitle datu">Design at UCSD<br></strong>design co-chair of UC San Diego&#x27;s largest design community</p>
-        </a>
-      </div>
-      <div class="column-10 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="#" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">brand design</strong> <br><strong class="homegridtitle df">Design Frontiers<br></strong>a day long sprint hosted at uc san diego by design at ucsd</p>
-        </a>
-      </div>
-    </div>
-    <div class="columns-6 w-row">
-      <div class="column-9 w-col w-col-6"><a href="illustrations.html" class="link-block-4 w-inline-block"><img src="images/header.jpg" srcset="images/header-p-800.jpeg 800w, images/header-p-1080.jpeg 1080w, images/header-p-1600.jpeg 1600w, images/header-p-2000.jpeg 2000w, images/header-p-2600.jpeg 2600w, images/header-p-3200.jpeg 3200w, images/header.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
-        <a href="#" class="homegridtext w-inline-block">
-          <p class="paragraph"><strong class="subtitle">personal</strong> <br><strong class="homegridtitle illustration">Illustration<br></strong>compilation of illustrations</p>
-        </a>
-      </div>
-      <div class="column-10 w-col w-col-6"></div>
-    </div>
-    <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
-    <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
-  </div>
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-</body>
-</html>
+    <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/webflow.js" type="text/javascript"></script>
+    <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  </body>
+  </html>
