--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body">
+<body class="body-copy">
   <div class="w-layout-grid grid-3a">
     <div id="w-node-4dd13f02c592-3b26933f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
-    <div id="w-node-84a2d29e0e9f-3b26933f" class="linskksksk activee"><a href="index.html" class="holds-links">work </a></div>
+    <div id="w-node-84a2d29e0e9f-3b26933f" class="linskksksk activee"><a href="/" class="holds-links">home</a></div>
     <div id="w-node-7b74f11cf3cf-3b26933f" class="linskksksk _2"><a href="about.html" class="holds-links active w--current">about</a></div>
     <h1 id="w-node-ee939eee215d-3b26933f" class="cactus">🌱</h1>
     <h1 id="w-node-9bde8af865d3-3b26933f" class="heading">Lucy</h1>
