--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link href="css/lucy-xu.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/fav.png" rel="shortcut icon" type="image/x-icon">  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div class="parallax">
@@ -22,7 +21,7 @@
       <div class="w-layout-grid grid-3a">
         <div id="w-node-4dd13f02c592-456c837f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
         <div id="w-node-84a2d29e0e9f-456c837f" class="linskksksk activee"><a href="/" class="holds-links active w--current">home</a></div>
-        <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="about.html" class="holds-links">about</a></div>
+        <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="about" class="holds-links">about</a></div>
         <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
         <h1 id="w-node-9bde8af865d3-456c837f" class="heading">Lucy is a designer of things...</h1>
         <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s student union. Design co-chair for UC San Diego’s biggest design community. <br></div>
