about page link

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <div class="w-layout-grid grid-3a">
     <div id="w-node-4dd13f02c592-3b26933f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
     <div id="w-node-84a2d29e0e9f-3b26933f" class="linskksksk activee"><a href="/" class="holds-links">home</a></div>
-    <div id="w-node-7b74f11cf3cf-3b26933f" class="linskksksk _2"><a href="about.html" class="holds-links active w--current">about</a></div>
+    <div id="w-node-7b74f11cf3cf-3b26933f" class="linskksksk _2"><a href="https://lucylouxu.com/about" class="holds-links active w--current">about</a></div>
     <h1 id="w-node-ee939eee215d-3b26933f" class="cactus">🌱</h1>
     <h1 id="w-node-9bde8af865d3-3b26933f" class="heading">Lucy</h1>
     <div id="w-node-b0f56acb0dc4-3b26933f" class="subtitle">📍san diego, ca; born and raised in arizona</div>
