--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
       <p class="about">Hi, my name is <strong>Lucy Xu</strong>.<strong><br>‍<br></strong>I am a product designer earning a Bachelor&#x27;s in Cognitive Science, specializing in Design and Interaction @ UC San Diego. <br><br>Right now I work as the lead brand/graphic designer @ University Centers (UCSD&#x27;s student union) and as the design co-chair for Design at UCSD.<br><br>I frequent the movie theater and collect all my movie stubs (since 2013), have only memorize Für Elise on the piano, love Brooklyn Nine-Nine, &amp; enjoy Arizona Iced Tea.<br><br>On the left, I am pictured sitting on a throne somewhere in MoPop in Seattle...</p>
     </div>
   </div>
-  <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
+  <p class="moreabout-copy">Found @lucylouxu (almost) anywhere</p>
   <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
