--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="https://lucylouxu.com/about" class="holds-links">about</a></div>
         <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
         <h1 id="w-node-9bde8af865d3-456c837f" class="heading">Lucy is a designer of things...</h1>
-        <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s student union. Design co-chair for UC San Diego’s biggest design community. <br></div>
+        <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s student union.
+          Design co-chair for UC San Diego’s biggest design community. <br></div>
       </div>
     </div>
   </div>
@@ -32,43 +33,43 @@
     <div class="bottompiece">
       <p class="paragraph-7">😇<em> please bear with me while my site is under construction</em></p>
       <div class="columns-3 w-row">
-        <div class="column-6 w-col w-col-6"><a href="acai-house.html" class="link-block-4 w-inline-block"><img src="images/acai.jpg" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-6 w-col w-col-6"><a href="https://lucylouxu.com/acai-house" class="link-block-4 w-inline-block"><img src="images/acai.jpg" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="acai-house.html" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">visual design</strong> <br><strong class="homegridtitle acai">Acai House<br></strong>website design for a local acai shop</p>
           </a>
         </div>
-        <div class="column-3 w-col w-col-6"><a href="soundcloud.html" class="link-block-4 w-inline-block"><img src="images/cloud.jpg" srcset="images/cloud-p-800.jpeg 800w, images/cloud-p-1080.jpeg 1080w, images/cloud-p-1600.jpeg 1600w, images/cloud-p-2000.jpeg 2000w, images/cloud-p-2600.jpeg 2600w, images/cloud-p-3200.jpeg 3200w, images/cloud.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-3 w-col w-col-6"><a href="https://lucylouxu.com/soundcloud" class="link-block-4 w-inline-block"><img src="images/cloud.jpg" srcset="images/cloud-p-800.jpeg 800w, images/cloud-p-1080.jpeg 1080w, images/cloud-p-1600.jpeg 1600w, images/cloud-p-2000.jpeg 2000w, images/cloud-p-2600.jpeg 2600w, images/cloud-p-3200.jpeg 3200w, images/cloud.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="soundcloud.html" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle">Soundcloud<br></strong>a redesign of soundcloud&#x27;s music player</p>
           </a>
         </div>
       </div>
       <div class="columns-4 w-row">
-        <div class="column-7 w-col w-col-6"><a href="hidden.html" class="link-block-4 w-inline-block"><img src="images/google.jpg" srcset="images/google-p-800.jpeg 800w, images/google-p-1080.jpeg 1080w, images/google-p-1600.jpeg 1600w, images/google-p-2000.jpeg 2000w, images/google-p-2600.jpeg 2600w, images/google-p-3200.jpeg 3200w, images/google.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-7 w-col w-col-6"><a href="https://lucylouxu.com/hidden" class="link-block-4 w-inline-block"><img src="images/google.jpg" srcset="images/google-p-800.jpeg 800w, images/google-p-1080.jpeg 1080w, images/google-p-1600.jpeg 1600w, images/google-p-2000.jpeg 2000w, images/google-p-2600.jpeg 2600w, images/google-p-3200.jpeg 3200w, images/google.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="hidden.html" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle goog">Bop<br></strong>designed an experience for new students to browse, search, and propose new student organizations</p>
           </a>
         </div>
-        <div class="column-8 w-col w-col-6"><a href="snapchat.html" class="link-block-4 w-inline-block"><img src="images/sc.jpg" srcset="images/sc-p-800.jpeg 800w, images/sc-p-1080.jpeg 1080w, images/sc-p-1600.jpeg 1600w, images/sc-p-2000.jpeg 2000w, images/sc-p-2600.jpeg 2600w, images/sc-p-3200.jpeg 3200w, images/sc.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-8 w-col w-col-6"><a href="https://lucylouxu.com/snapchat" class="link-block-4 w-inline-block"><img src="images/sc.jpg" srcset="images/sc-p-800.jpeg 800w, images/sc-p-1080.jpeg 1080w, images/sc-p-1600.jpeg 1600w, images/sc-p-2000.jpeg 2000w, images/sc-p-2600.jpeg 2600w, images/sc-p-3200.jpeg 3200w, images/sc.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="snapchat.html" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">product design</strong> <br><strong class="homegridtitle snap">Snapchat<br></strong>a redesign of snapchat&#x27;s display of &quot;stories&quot; on the current discover page</p>
           </a>
         </div>
       </div>
       <div class="columns-6 w-row">
-        <div class="column-9 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-9 w-col w-col-6"><a href="https://lucylouxu.com/coming-soon" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="#" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">visual + brand design</strong> <br><strong class="homegridtitle datu">Design at UCSD<br></strong>design co-chair of UC San Diego&#x27;s largest design community</p>
           </a>
         </div>
-        <div class="column-10 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-10 w-col w-col-6"><a href="https://lucylouxu.com/coming-soon" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="#" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">brand design</strong> <br><strong class="homegridtitle df">Design Frontiers<br></strong>a day long sprint hosted at uc san diego by design at ucsd</p>
           </a>
         </div>
       </div>
       <div class="columns-6 w-row">
-        <div class="column-9 w-col w-col-6"><a href="illustrations.html" class="link-block-4 w-inline-block"><img src="images/header.jpg" srcset="images/header-p-800.jpeg 800w, images/header-p-1080.jpeg 1080w, images/header-p-1600.jpeg 1600w, images/header-p-2000.jpeg 2000w, images/header-p-2600.jpeg 2600w, images/header-p-3200.jpeg 3200w, images/header.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <div class="column-9 w-col w-col-6"><a href="https://lucylouxu.com/illustrations" class="link-block-4 w-inline-block"><img src="images/header.jpg" srcset="images/header-p-800.jpeg 800w, images/header-p-1080.jpeg 1080w, images/header-p-1600.jpeg 1600w, images/header-p-2000.jpeg 2000w, images/header-p-2600.jpeg 2600w, images/header-p-3200.jpeg 3200w, images/header.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="#" class="homegridtext w-inline-block">
             <p class="paragraph"><strong class="subtitle">personal</strong> <br><strong class="homegridtitle illustration">Illustration<br></strong>compilation of illustrations</p>
           </a>
