--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div id="w-node-7b74f11cf3cf-3b26933f" class="linskksksk _2"><a href="https://lucylouxu.com/about" class="holds-links active w--current">about</a></div>
     <h1 id="w-node-ee939eee215d-3b26933f" class="cactus">🌱</h1>
     <h1 id="w-node-9bde8af865d3-3b26933f" class="heading">Lucy</h1>
-    <div id="w-node-b0f56acb0dc4-3b26933f" class="subtitle">📍san diego, ca; born and raised in arizona</div>
+    <div id="w-node-b0f56acb0dc4-3b26933f" class="subtitle-copy">📍san diego, ca; born and raised in arizona</div>
     <div id="w-node-10d6bd923068-3b26933f" class="desc">currently eating food &amp; listening to music </div>
   </div>
   <div class="columns w-row">
