--- a/acai-house.html
+++ b/acai-house.html
@@ -15,7 +15,7 @@
       gtag('config', 'UA-137895463-1');
     </script>
 
-    
+
   <meta charset="utf-8">
   <title>Acai House</title>
   <meta content="Acai House" property="og:title">
@@ -43,7 +43,7 @@
   <p class="p3cap">Before and after the Acai House website redesign...<br>‍</p>
   <p class="paragraph-3">Over the course of the 10 weeks, we set out to reimagine the current website, conduct user research and user testing, wireframe, and prototype our designs to show our process and final product to our client.<br><br>My role in this project involved spearheading the visual direction of the brand.</p>
   <h1 class="writeuphead">Objectives</h1>
-  <p class="paragraph-3">Our main objectives when recreating the Acai House&#x27;s visual identity were to<br>– Translate the store aesthetic to their digital platform<br>– Reinforce the idea of &quot;eating with your eyes&quot; by creating an image-driven site<br>– Strengthen the healthy lifestyle brand image<br><br>As Acai House is a health food restaurant, we also created objectives aimed directly at the menu. We wanted to pinpoint the menu as the main area to improve visual aesthetics to increase customer engagement with the website. These objectives include<br>– Revamping the product categorization<br>– Communicating the diverse selection of foods offered at Acai House<br>– Fix product visibility with improved information hierarchy</p><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  <p class="paragraph-3">Our main objectives when recreating the Acai House&#x27;s visual identity were to<br>– Translate the store aesthetic to their digital platform<br>– Reinforce the idea of &quot;eating with your eyes&quot; by creating an image-driven site<br>– Strengthen the healthy lifestyle brand image<br><br>As Acai House is a health food restaurant, we also created objectives aimed directly at the menu. We wanted to pinpoint the menu as the main area to improve visual aesthetics to increase customer engagement with the website. These objectives include<br>– Revamping the product categorization<br>– Communicating the diverse selection of foods offered at Acai House<br>– Fix product visibility with improved information hierarchy<br><br> <b>More coming soon!</b></p>
   <div class="div-block"></div>
   <p class="moreabout">Found @lucylouxu (almost) anywhere</p>
   <p class="moreaboutlinks"><a href="https://linkedin.com/in/lucylouxu/" target="_blank" class="aboutlink">LinkedIn</a> <a href="https://twitter.com/lucylouxu" target="_blank" class="aboutlink">Twitter</a> <a href="http://instagram.com/lucylouxu/" target="_blank" class="aboutlink">Instagram</a></p>
