--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         </div>
       </div>
       <div class="columns-6 w-row">
-        <div class="column-9 w-col w-col-6"><a href="#" class="link-block-4 w-inline-block"><img src="images/du.jpg" alt="" class="homegrid"></a>
-          <a href="#" class="homegridtext w-inline-block">
-            <p class="paragraph"><strong class="subtitle">visual + brand design</strong> <br><strong class="homegridtitle datu">Design at UCSD<br></strong>design co-chair of UC San Diego&#x27;s largest design community</p>
-          </a>
+        <div class="column-9 w-col w-col-6"><a href="/coming-soon" class="link-block-4 w-inline-block"><img src="images/du.jpg" srcset="images/du.jpg 500w, images/du.jpg 1080w, images/du.jpg 1600w, images/du.jpg 2000w, images/du.jpg 2600w, images/du.jpg 3200w, images/du.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
+        <a href="/coming-soon" class="homegridtext w-inline-block">
+          <p class="paragraph"><strong class="subtitle">visual + brand design</strong> <br><strong class="homegridtitle datu">Design at UCSD<br></strong>design co-chair of UC San Diego&#x27;s largest design community</p>
+        </a>
         </div>
         <div class="column-10 w-col w-col-6"><a href="https://lucylouxu.com/coming-soon" class="link-block-4 w-inline-block"><img src="images/intuit.jpg" srcset="images/intuit-p-800.jpeg 800w, images/intuit-p-1080.jpeg 1080w, images/intuit-p-1600.jpeg 1600w, images/intuit-p-2000.jpeg 2000w, images/intuit-p-2600.jpeg 2600w, images/intuit-p-3200.jpeg 3200w, images/intuit.jpg 3413w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7756px) 44vw, 3413px" alt="" class="homegrid"></a>
           <a href="#" class="homegridtext w-inline-block">
