--- a/soundcloud.html
+++ b/soundcloud.html
@@ -31,7 +31,8 @@
   <div class="div-block-2"></div>
   <a href="index.html" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
-  </a><img src="images/soundcloud.jpg" srcset="images/soundcloud-p-500.jpeg 500w, images/soundcloud-p-800.jpeg 800w, images/soundcloud-p-1600.jpeg 1600w, images/soundcloud-p-2000.jpeg 2000w, images/soundcloud-p-2600.jpeg 2600w, images/soundcloud.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
+  </a>
+  <img src="images/soundcloud.jpg" srcset="images/soundcloud-p-500.jpeg 500w, images/soundcloud-p-800.jpeg 800w, images/soundcloud-p-1600.jpeg 1600w, images/soundcloud-p-2000.jpeg 2000w, images/soundcloud-p-2600.jpeg 2600w, images/soundcloud.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text sc">— product design</strong></p>
   <p class="writeuptitle">Reimagination of the SoundCloud Music Player</p>
   <p class="paragraph-3">Winter 2019<br><strong>Final Result:</strong> bit.ly/SoundCloud_LX</p>
