--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div class="div-block-2"></div>
-  <a href="index.html" class="back w-inline-block">
+  <a href="https://lucylouxu.com" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a>
   <p class="hiddentitle">Error 404</p>
