--- a/soundcloud.html
+++ b/soundcloud.html
@@ -29,7 +29,7 @@
 </head>
 <body class="body">
   <div class="div-block-2"></div>
-  <a href="index.html" class="back w-inline-block">
+  <a href="https://lucylouxu.com" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a>
   <img src="images/soundcloud.jpg" srcset="images/soundcloud-p-500.jpeg 500w, images/soundcloud-p-800.jpeg 800w, images/soundcloud-p-1600.jpeg 1600w, images/soundcloud-p-2000.jpeg 2000w, images/soundcloud-p-2600.jpeg 2600w, images/soundcloud.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
@@ -44,7 +44,7 @@
   <p class="paragraph-3">Because I am an Android user, I am used to the constant chatter of how Android’s always get updates to apps later, how we’re always “green” and “different, etc., so the first thing I did was compare the Apple SoundCloud app (left) and my Android SoundCloud app (right).</p>
   <div class="casestudypix"><img src="images/pic2.png" srcset="images/pic2-p-500.png 500w, images/pic2-p-800.png 800w, images/pic2.png 922w" sizes="100vw" alt=""></div>
   <p class="paragraph-3">There are couple small differences between both UI’s, and the first is the 4th icon. On the Apple app, SoundCloud chose to use the loop button whereas on Android it’s the icon for viewing the music queue.</p>
-  <div class="casestudypix small"><img src="images/pic3.png" srcset="images/pic3-p-500.png 500w, images/pic3-p-800.png 800w, images/pic3.png 922w" sizes="100vw" alt="" class="image-13"></div><a href="index.html" class="link-block-2 w-inline-block"><img src="images/logo-02.png" width="38" alt=""></a>
+  <div class="casestudypix small"><img src="images/pic3.png" srcset="images/pic3-p-500.png 500w, images/pic3-p-800.png 800w, images/pic3.png 922w" sizes="100vw" alt="" class="image-13"></div>
   <p class="paragraph-3">The second small detail is that on the Apple UI, the comment icon displays the amount of comments while the Android UI does not. Both have the number of likes the song has recieved but not comments. <br><br>This brought forth the questions:<br> – Why only the slight difference between both UI’s?<br> – Is the music queue or looping a song more important to a SoundCloud user? <br>– Why was the amount of likes more important that the amount of comments on the Android app? <br><br>Other iconographic differences I chalked up to different Android/Apple standards (i.e. the share icon). What is similar about both UI’s is that the focal point of the UI seems to be the album art. It takes the entire screen and everything is overlayed or placed on top of it.</p>
   <div class="casestudypix"><img src="images/orig.png" srcset="images/orig-p-500.png 500w, images/orig-p-800.png 800w, images/orig.png 973w" sizes="100vw" alt="" class="image-12"></div>
   <p class="paragraph-3">This results in the iconography at the bottom is hard to discern, especially with such busy album art.</p>
