--- a/coming-soon.html
+++ b/coming-soon.html
@@ -29,7 +29,7 @@
 </head>
 <body class="body">
   <div class="div-block-2"></div>
-  <a href="index.html" class="back w-inline-block">
+  <a href="https://lucylouxu.com" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a>
   <p class="hiddentitle">Coming Soon!</p>
