--- a/snapchat.html
+++ b/snapchat.html
@@ -29,7 +29,7 @@
 </head>
 <body class="body">
   <div class="div-block-2"></div>
-  <a href="index.html" class="back w-inline-block">
+  <a href="https://lucylouxu.com" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
   </a><img src="images/coverpage_lucy.jpg" srcset="images/coverpage_lucy-p-500.jpeg 500w, images/coverpage_lucy-p-800.jpeg 800w, images/coverpage_lucy-p-1600.jpeg 1600w, images/coverpage_lucy-p-2000.jpeg 2000w, images/coverpage_lucy-p-2600.jpeg 2600w, images/coverpage_lucy.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text">— product design</strong></p>
