--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="div-block-3">
       <div class="w-layout-grid grid-3a">
-        <div id="w-node-4dd13f02c592-456c837f" class="linskksksk"><a href="images/Xu_Lucy_Resume.pdf" class="holds-links">resume</a></div>
+        <div id="w-node-4dd13f02c592-456c837f" class="linskksksk"><a href="images/Xu_Lucy_Resume.pdf" class="holds-links">résumé</a></div>
         <div id="w-node-84a2d29e0e9f-456c837f" class="linskksksk activee"><a href="/" class="holds-links active w--current">home</a></div>
         <div id="w-node-7b74f11cf3cf-456c837f" class="linskksksk _2"><a href="https://lucylouxu.com/about" class="holds-links">about</a></div>
         <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
