fixing figma embed

--- a/acai-house.html
+++ b/acai-house.html
@@ -32,7 +32,8 @@
   <div class="div-block-2"></div>
   <a href="https://lucylouxu.com" class="back w-inline-block">
     <div class="text-block-3">⟵ back</div>
-  </a><img src="images/acaihead.jpg" srcset="images/acaihead-p-500.jpeg 500w, images/acaihead-p-800.jpeg 800w, images/acaihead-p-1600.jpeg 1600w, images/acaihead-p-2600.jpeg 2600w, images/acaihead.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
+  </a>
+  <img src="images/acaihead.jpg" srcset="images/acaihead-p-500.jpeg 500w, images/acaihead-p-800.jpeg 800w, images/acaihead-p-1600.jpeg 1600w, images/acaihead-p-2600.jpeg 2600w, images/acaihead.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text acaihouse">— visual design</strong></p>
   <p class="writeuptitle">Acai House</p>
   <p class="paragraph-3">Winter 2019<br></p>
