--- a/soundcloud.html
+++ b/soundcloud.html
@@ -75,10 +75,10 @@
   <div class="casestudypix"><img src="images/pic7.png" srcset="images/pic7-p-500.png 500w, images/pic7.png 973w" sizes="100vw" alt=""></div>
   <p class="paragraph-3">I chose to leave the soundwave progress bar out of “Car Mode” because I wanted to create a simple and informational screen for drivers to be able to quickly glance at. The title, play, forward, and rewind buttons take up the most surface area because it’s more accessible for drivers to interact with without being completely distracted by the busier UI.<br></p>
   <h1 class="writeuphead">Final Prototype</h1>
-  <p class="paragraph-3">Linked below shortly!<br></p>
+  <p class="paragraph-3">Linked below shortly!<br><br></p>
 
   <center>
-    <iframe style="border: none; width: 600.643px; height: 600.643px;" width="800" height="800"
+    <iframe style="border: none; width: 50%; height: 65vh;" width="800" height="800"
     src="https://www.figma.com/embed?embed_host=share&amp;url=https%3A%2F%2Fwww.figma.com%2Fproto%2FQKCljQmU4N9m78mIurhslCp7%2Fkpcb-soundcloud%3Fnode-id%3D13%253A326%26viewport%3D177%252C579%252C0.478615%26scaling%3Dscale-down"
     allowfullscreen=""></iframe></center>
 
