page names, pic center

--- a/acai-house.html
+++ b/acai-house.html
@@ -39,7 +39,7 @@
   <p class="paragraph-3">Winter 2019<br></p>
   <h1 class="writeuphead">Overview</h1>
   <p class="paragraph-3">For my Interaction Design course, my group and I sought out a real world client for our project. We were to redesign (or design) a local business&#x27;s website and create deliverables that were ready to implement at the end of 10 weeks.</p>
-  <div class="casestudypix"><img src="images/pic1_2.png" srcset="images/pic1_2-p-500.png 500w, images/pic1_2-p-800.png 800w, images/pic1_2.png 978w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 74vw, (max-width: 991px) 60vw, 34vw" alt=""></div>
+  <div class="casestudypix"><img src="images/pic1_2.png" srcset="images/pic1_2-p-500.png 500w, images/pic1_2-p-800.png 800w, images/pic1_2.png 978w" sizes="100vw" alt=""></div>
   <p class="p3cap">Before and after the Acai House website redesign...<br>‍</p>
   <p class="paragraph-3">Over the course of the 10 weeks, we set out to reimagine the current website, conduct user research and user testing, wireframe, and prototype our designs to show our process and final product to our client.<br><br>My role in this project involved spearheading the visual direction of the brand.</p>
   <h1 class="writeuphead">Objectives</h1>
