movie tix edits

--- a/about.html
+++ b/about.html
@@ -41,7 +41,16 @@
   <div class="columns w-row">
     <div class="column-4 w-col w-col-6"><img src="images/ridiculous.jpg" srcset="images/ridiculous-p-500.jpeg 500w, images/ridiculous-p-800.jpeg 800w, images/ridiculous-p-1080.jpeg 1080w, images/ridiculous-p-1600.jpeg 1600w, images/ridiculous-p-2000.jpeg 2000w, images/ridiculous-p-2600.jpeg 2600w, images/ridiculous.jpg 3092w" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, (max-width: 991px) 38vw, (max-width: 7190px) 43vw, 3092px" alt="" class="image-9"></div>
     <div class="column-5 w-col w-col-6">
-      <p class="about">Hi, my name is <strong>Lucy Xu</strong>.<strong><br>‍<br></strong>I am a product designer earning a Bachelor&#x27;s in Cognitive Science, specializing in Design and Interaction @ UC San Diego. <br><br>Right now I work as the lead brand/graphic designer @ University Centers (UCSD&#x27;s student union) and as the co-Creative Director for <a href="https://designatucsd.org">Design at UCSD</a>.<br><br>I frequent the movie theater and collect all my movie stubs (since 2013), have only memorize Für Elise on the piano, love Brooklyn Nine-Nine, &amp; enjoy Arizona Iced Tea.<br><br>On the left, I am pictured sitting on a throne somewhere in MoPop in Seattle...</p>
+      <p class="about">Hi, my name is <strong>Lucy Xu</strong>.<strong><br>‍<br></strong>
+        I am a product designer earning a Bachelor&#x27;s in Cognitive Science,
+        specializing in Design and Interaction @ UC San Diego. <br><br>
+        Right now I work as the lead brand/graphic designer @ University Centers
+        (UCSD&#x27;s student union) and as the co-Creative Director for
+        <a href="https://designatucsd.org">Design at UCSD</a>.<br><br>I frequent
+        the movie theater and have collected all my <a href="https://lucylouxu.com/movie-tix">movie stubs</a> (since 2013), have only 
+        memorize Für Elise on the piano, love Brooklyn Nine-Nine, &amp; enjoy
+        Arizona Iced Tea.<br><br>On the left, I am pictured sitting on a throne
+        somewhere in MoPop in Seattle...</p>
     </div>
   </div>
   <p class="moreabout-copy">Found @lucylouxu (almost) anywhere</p>
