--- a/about.html
+++ b/about.html
@@ -47,9 +47,13 @@
         Right now I work as the lead brand/graphic designer @ University Centers
         (UCSD&#x27;s student union) and as the co-Creative Director for
         <a href="https://designatucsd.org">Design at UCSD</a>.<br><br>I frequent
-        the movie theater and have collected all my <a href="https://lucylouxu.com/movie-tix">movie stubs</a> (since 2013), have only 
-        memorize Für Elise on the piano, love Brooklyn Nine-Nine, &amp; enjoy
-        Arizona Iced Tea.<br><br>On the left, I am pictured sitting on a throne
+        the movie theater and have collected all my <a href="https://lucylouxu.com/movie-tix">movie stubs</a> since 2013. I have
+        memorized only Für Elise on the piano &amp; enjoy a
+        peach green tea with boba and 25% sugar.<br><br>
+
+        Wholeheartedly #TeamCap
+
+        <br><br>On the left, I am pictured sitting on a throne
         somewhere in MoPop in Seattle...</p>
     </div>
   </div>
