--- a/work.html
+++ b/work.html
@@ -22,9 +22,22 @@
   <div class="leftbar w-clearfix"><a href="index.html" class="title">lucy xu</a>
     <p class="allleftnav"><a href="index.html" class="leftnav">home<br></a><a href="work.html" class="leftnav w--current">work<br></a><a href="about.html" class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
   </div>
-  <div class="right"><a href="acai-house.html" class="link-block-5 w-inline-block"><img src="images/acai.jpg" width="480" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 57vw, (max-width: 767px) 60vw, (max-width: 991px) 55vw, 40vw" alt="" class="homegrid-3"></a>
+  <div class="right">
+
+    <a href="hidden.html" class="link-block-5 w-inline-block">
+      <img src="images/servicenow.png" width="480" sizes="(max-width: 479px) 57vw, (max-width: 767px) 60vw, (max-width: 991px) 55vw, 40vw" alt="" class="homegrid-3"></a>
+    <a href="hidden.html" class="homegridtext2 w-inline-block">
+        <p class="paragraph-4">
+          <strong class="subtitle-2">visual design</strong> <br>
+          <strong class="homegridtitle">ServiceNow<br>
+          </strong>interned as a ux/ui visual designer on ServiceNow's design systems team</p>
+
+    <a href="acai-house.html" class="link-block-5 w-inline-block"><img src="images/acai.jpg" width="480" srcset="images/acai-p-800.jpeg 800w, images/acai-p-1080.jpeg 1080w, images/acai-p-1600.jpeg 1600w, images/acai-p-2000.jpeg 2000w, images/acai-p-2600.jpeg 2600w, images/acai-p-3200.jpeg 3200w, images/acai.jpg 3413w" sizes="(max-width: 479px) 57vw, (max-width: 767px) 60vw, (max-width: 991px) 55vw, 40vw" alt="" class="homegrid-3"></a>
     <a href="acai-house.html" class="homegridtext2 w-inline-block">
       <p class="paragraph-4"><strong class="subtitle-2">visual design</strong> <br><strong class="homegridtitle">Acai House<br></strong>website design for a local acai shop</p>
+
+
+
     </a><a href="soundcloud.html" class="link-block-5 w-inline-block"><img src="images/cloud.jpg" srcset="images/cloud-p-800.jpeg 800w, images/cloud-p-1080.jpeg 1080w, images/cloud-p-1600.jpeg 1600w, images/cloud-p-2000.jpeg 2000w, images/cloud-p-2600.jpeg 2600w, images/cloud-p-3200.jpeg 3200w, images/cloud.jpg 3413w" sizes="(max-width: 479px) 57vw, (max-width: 767px) 60vw, (max-width: 991px) 55vw, 40vw" alt="" class="homegrid-3"></a>
     <a href="soundcloud.html" class="homegridtext2 w-inline-block">
       <p class="paragraph-4"><strong class="subtitle-2">product design</strong> <br><strong class="homegridtitle">Soundcloud<br></strong>a redesign of soundcloud&#x27;s music player</p>
