--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
   <link href="icons/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-3">
-  <div class="leftbar w-clearfix"><a href="index.html" class="title">lucy xu</a>
-    <p class="allleftnav"><a href="index.html" class="leftnav">home<br></a><a href="work.html" class="leftnav">work<br></a><a href="about.html" class="leftnav w--current">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
+  <div class="leftbar w-clearfix"><a href="indexold.html" class="title">lucy xu</a>
+    <p class="allleftnav"><a href="indexold.html" class="leftnav">home<br></a><a href="work.html" class="leftnav">work<br></a><a href="about.html" class="leftnav w--current">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
   </div>
   <div class="right"><img src="images/ridiculous.jpg" width="349" srcset="images/ridiculous-p-500.jpeg 500w, images/ridiculous-p-800.jpeg 800w, images/ridiculous-p-1080.jpeg 1080w, images/ridiculous-p-1600.jpeg 1600w, images/ridiculous-p-2000.jpeg 2000w, images/ridiculous-p-2600.jpeg 2600w, images/ridiculous.jpg 3092w" sizes="40vw" alt="" class="image-9">
     <p class="newabout">Hi, my name is <strong>Lucy Xu</strong>.<strong><br>‍<br></strong>I am a product designer earning a Bachelor&#x27;s in Cognitive Science, specializing in Design and Interaction @ UC San Diego. <br><br>Right now I work as the lead brand/graphic designer @ University Centers (UCSD&#x27;s student union) and as the design co-chair for Design at UCSD.<br><br>I frequent the movie theater and collect all my movie stubs (since 2013), have only memorize Für Elise on the piano, love Brooklyn Nine-Nine, &amp; enjoy Arizona Iced Tea.<br><br>On the top, I am pictured sitting on a throne somewhere in MoPop in Seattle...<br></p>
