--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["IBM Plex Mono:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="icons/octfavicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="icons/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="icons/webclip.png" rel="apple-touch-icon">
 
 
@@ -23,19 +23,69 @@
 </head>
 
 
-<body class="body-3">
-  <div class="leftbar w-clearfix"><a href="index.html" class="title w--current">lucy xu</a>
-    <p class="allleftnav"><a href="index.html"
-      class="leftnav w--current"> home<br></a><a href="work.html"
-      class="leftnav">work<br></a><a href="about.html"
-      class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
+<body class="body">
+
+  <!-- <div class="outer">
+  <div class="middle">
+  <div class="inner"> -->
+  <div class="name">lucy xu<span class="blinking-cursor">_</span></div>
+
+  <div class="newintro">hi my site is currently being reconstructed. <a href="indexold.html">click here</a> for my old site!</div>
+
+  <!-- </div>
+</div>
+</div> -->
+<!--
+<div class="navigation">
+  <a href="/" class="navigationlink">home</a>
+  <a href="/" class="navigationlink">work</a>
+  <a href="/" class="navigationlink">about</a>
+</div>
+
+<div class="coolgallery">
+  <div class="coolgalleryscroll">
+    <div class="galleryimg">
+      <img src="images/acai.jpg">
+    </div>
+
+    <div class="galleryimg">
+      <img src="images/bird.gif">
+    </div>
+
+    <div class="galleryimg">
+      <img src="images/boop.jpg">
+    </div>
+
   </div>
-  <div class="right">
-    <p class="intro">studying Cognitive Science + lead designer at UC San Diego’s student union + design co-chair for UC San Diego’s biggest design community_<br></p>
-    <p class="newfootalhome">Found @lucylouxu (almost) anywhere<br><a href="http://linkedin.com/in/lucylouxu" class="newfoot">LinkedIn</a><a href="https://dribbble.com/lucylouxu" class="newfoot twitter">Dribbble</a><a href="http://instagram.com/lucylouxu/" class="newfoot">Instagram</a></p>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+</div>
+
+
+<div class="allwork">
+
+  <a href="/" class="work">
+    <img> </img>
+  </a>
+
+  <div class="worktitle">ServiceNow</div>
+  <div class="workdesc">
+    My summer internship as a UX/UI Visual Design intern. <br>
+
+    <a href="/"> <span class="arrow"></span>
+
+    </div>
+    <div class="workbg">
+
+    </div>
+
+
+  </div> -->
+
+
+
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/webflow.js" type="text/javascript"></script>
+
+
+<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
