--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
 <!--  Last Published: Sun Aug 18 2019 01:20:55 GMT+0000 (UTC)  -->
 <html data-wf-page="5d392e77f74d8bb7c3e57bce" data-wf-site="5d37e0cff1f7ed69397756bb">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151634475-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151634475-1');
+</script>
+
   <meta charset="utf-8">
   <title>About – Lucy Xu</title>
   <meta content="About – Lucy Xu" property="og:title">
