--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
 
   <a href="/" class="myname">lucy xu</a>
-  <div class="navs"><a href="/work" class="nav">work</a><a href="/about" class="nav">about</a></div>
+  <div class="navs">
+    <a href="/work" class="nav">work</a>
+    <a href="/about" class="nav">about</a>
+  </div>
 
   <div class="mydescbox">
     <p class="mydesc">Incoming Visual Designer at ServiceNow.</p>
