uhhh more stuff

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-  <a href="/" class="myname">lucy xu</a>
+  <a href="/" class="myname">lucy xu<span class="blinking-cursor">_</span></a>
   <div class="navs">
     <a href="/work" class="nav">work</a>
     <a href="/about" class="nav">about</a>
