--- a/work.html
+++ b/work.html
@@ -29,8 +29,8 @@
   <link href="icons/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-3">
-  <div class="leftbar w-clearfix"><a href="indexold.html" class="title">lucy xu</a>
-    <p class="allleftnav"><a href="indexold.html" class="leftnav">home<br></a><a href="work.html" class="leftnav w--current">work<br></a><a href="about.html" class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
+  <div class="leftbar w-clearfix"><a href="/" class="title">lucy xu</a>
+    <p class="allleftnav"><a href="/" class="leftnav">home<br></a><a href="work.html" class="leftnav w--current">work<br></a><a href="about.html" class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
   </div>
   <div class="right">
 
