about pg messup

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
 
   <div class="navs">
     <a href="/work" class="nav">work</a>
-    <a class="nav" href="#popup1">about</a>
+    <a href="/about" class="nav">about</a>
+
+    <!-- <a class="nav" href="#popup1">about</a>
 
         <div id="popup1" class="overlay">
           <div class="popup">
             Here i am
             <a class="close" href="#">&times;</a>
             <div class="content">
-              <img class="aboutimg" src="images/ridiculous.jpg">
+              <img class="aboutimg" src="images/ridiculous.jpg"> -->
 
             </div>
           </div>
