--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <!--  Last Published: Wed Feb 26 2020 01:21:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e322ec8338ff1c8129ea1f0" data-wf-site="5d379c4e17504bd528083ad3">
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151634475-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151634475-1');
+</script>
+
   <meta charset="utf-8">
   <title>Home</title>
   <meta content="Home" property="og:title">
